--- a/cv_blog/WebApplication1/cv_blog.csproj
+++ b/cv_blog/WebApplication1/cv_blog.csproj
@@ -67,6 +67,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="AdminDeneyimEkle.aspx" />
+    <Content Include="AdminDeneyimGüncelle.aspx" />
+    <Content Include="AdminDeneyimSil.aspx" />
     <Content Include="adminDosyalar\bootstrap-3.3.7\.gitattributes" />
     <Content Include="adminDosyalar\bootstrap-3.3.7\.gitignore" />
     <Content Include="adminDosyalar\bootstrap-3.3.7\dist\css\bootstrap-theme.css" />
@@ -1747,6 +1750,27 @@
     </Compile>
     <Compile Include="admin.Master.designer.cs">
       <DependentUpon>admin.Master</DependentUpon>
+    </Compile>
+    <Compile Include="AdminDeneyimEkle.aspx.cs">
+      <DependentUpon>AdminDeneyimEkle.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AdminDeneyimEkle.aspx.designer.cs">
+      <DependentUpon>AdminDeneyimEkle.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="AdminDeneyimGüncelle.aspx.cs">
+      <DependentUpon>AdminDeneyimGüncelle.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AdminDeneyimGüncelle.aspx.designer.cs">
+      <DependentUpon>AdminDeneyimGüncelle.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="AdminDeneyimSil.aspx.cs">
+      <DependentUpon>AdminDeneyimSil.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AdminDeneyimSil.aspx.designer.cs">
+      <DependentUpon>AdminDeneyimSil.aspx</DependentUpon>
     </Compile>
     <Compile Include="DataSet1.Designer.cs">
       <AutoGen>True</AutoGen>
